--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<img src="http://placehold.it/100x100" alt="Udacity Logo" class="logo">
+					<img src="images/img/logo-small.png" alt="Udacity Logo" class="logo">
 				</div>
 				<div class="col-md-6 text-right text-uppercase">
 					<h1 class="text-weight">Melbin Thomas</h1>
@@ -26,7 +26,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<img src="http://placehold.it/800x400" alt= "developer image" class="img-responsive">
+					<img src="images/img/cover-large.jpg" alt= "developer image">
 				</div>
 			</div>
 			<div class="row">
@@ -36,17 +36,17 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center">
-					<img src="http://placehold.it/350x350" alt= "developer image" class="img-responsive">
+					<img src="images/img/portfolio-medium.jpg" alt= "developer image" >
 					<h3 class="text-uppercase">Work1</h3>
 					<a href="link">link1</a>
 				</div>
 				<div class="col-md-4 text-center">
-					<img src="http://placehold.it/350x350" alt= "developer image" class="img-responsive">
+					<img src="http://placehold.it/350x350" alt= "developer image" >
 					<h3 class="text-uppercase ">Work2</h3>
 					<a href="link">link1</a>
 				</div>
 				<div class="col-md-4 text-center">
-					<img src="http://placehold.it/350x350" alt= "developer image" class="img-responsive">
+					<img src="http://placehold.it/350x350" alt= "developer image">
 					<h3 class="text-uppercase">Work3</h3>
 					<a href="link">link1</a>					
 				</div>
