--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet"  href="css/bootstrap.css">
 		<link rel="stylesheet"  href="css/styles.css">
+		<script type="text/javascript" src="js/jquery-min.js"></script>
+    	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 ">
 					<img src="images/img/logo-small.png" alt="Udacity Logo" class="logo">
 				</div>
 				<div class="col-md-6 text-right text-uppercase">
@@ -26,7 +28,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<img src="images/img/cover-large.jpg" alt= "developer image">
+					<img src="images/img/cover-large.jpg" alt= "developer image" >
 				</div>
 			</div>
 			<div class="row">
@@ -36,14 +38,14 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center">
-					<img src="images/img/portfolio-medium.jpg" alt= "developer image" >
-					<h3 class="text-uppercase">Work1</h3>
-					<a href="link">link1</a>
+					<img src="images/img/portfolio-medium.jpg" alt= "developer image" data-toggle="modal" data-target="#project1">
+					<h3 class="text-uppercase">Porfolio</h3>
+					<a href="https://github.com/njanmelbin/frontend-nanodegree-portfolio.git">github-repo</a>
 				</div>
 				<div class="col-md-4 text-center">
-					<img src="http://placehold.it/350x350" alt= "developer image" >
-					<h3 class="text-uppercase ">Work2</h3>
-					<a href="link">link1</a>
+					<img src="images/img/resume-medium.jpg" alt= "developer image" data-toggle="modal" data-target="#project2">
+					<h3 class="text-uppercase ">Resume</h3>
+					<a href="https://github.com/njanmelbin/frontend-nanaodegree-resume.git">github-repo</a>
 				</div>
 				<div class="col-md-4 text-center">
 					<img src="http://placehold.it/350x350" alt= "developer image">
@@ -52,5 +54,38 @@
 				</div>
 			</div>
 		</div>
+		  <!-- Modal -->
+    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                </div>
+                <div class="modal-body">
+                    <img class="img-responsive" src="images/img/portfolio-medium.jpg">
+                    This was my first project in this class. I learned a lot about HTML and CSS.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                </div>
+                <div class="modal-body">
+                    <img class="img-responsive" src="images/img/resume-medium.jpg">
+                    This was my first project in this class. I learned a lot about HTML and CSS.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 	</body>
 </html>
