small class removed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="text-muted small">Featured Work</h2>
+					<h2 class="text-muted">Featured Work</h2>
 				</div>
 			</div>
 			<div class="row">
