--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Portfolio</title>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet"  href="css/bootstrap.css">
+		<link rel="stylesheet"  href="css/bootstrap.min.css">
 		<link rel="stylesheet"  href="css/styles.css">
-		<script type="text/javascript" src="js/jquery-min.js"></script>
-    	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
+			<header class="row">
 				<div class="col-md-6 col-xs-6 ">
 					<img src="images/img/logo-small.png" alt="Udacity Logo" class="logo">
 				</div>
@@ -20,33 +18,33 @@
 					<h1 class="text-weight">Melbin Thomas</h1>
 					<h4>Front-end Ninja</h4>
 				</div>
-			</div>
-			<div class="row">
+			</header>
+			<section class="row">
 				<div class="col-md-12">
 					<hr class="horizontal-style">
 				</div>
-			</div>
-			<div class="row">
+			</section>
+			<section class="row">
 				<div class="col-md-12 ">
-					<!-- <img src="images/img/cover-small.jpg" -->
-						 <!-- scrset="images/img/cover-small.jpg 350w,images/img/cover-medium.jpg 600w"	 -->
-					 <!-- alt= "developer image" > -->
 					 <picture>
-					 	<source scrset="images/img/cover-medium.jpg" media="(max-width: 400px)" >
+					 	<source media="(max-width: 400px)" srcset="images/img/cover-medium.jpg">
 					 	<source media="(max-width: 600px)" srcset="images/img/cover-medium.jpg">
-					 	<img src="images/img/cover-large.jpg">
+					 	<img src="images/img/cover-large.jpg" alt="cover-image">
 					 </picture>
 				</div>
-			</div>
-			<div class="row">
+			</section>
+			<section class="row">
 				<div class="col-md-12">
 					<h2 class="text-muted">Featured Work</h2>
+					<p>All my works for front end nanodegree are included. Every projects has its git repo listed below and you can read
+					the readme file in github for more information about these projects.
+					</p>
 				</div>
-			</div>
-			<div class="row">
+			</section>
+			<section class="row">
 				<div class="col-md-4 col-sm-6 text-center">
 					<img src="images/img/portfolio-medium.jpg" alt= "developer image" data-toggle="modal" data-target="#project1">
-					<h3 class="text-uppercase">Porfolio</h3>
+					<h3 class="text-uppercase">Portfolio</h3>
 					<a href="https://github.com/njanmelbin/frontend-nanodegree-portfolio.git">github-repo</a>
 				</div>
 				<div class="col-md-4 col-sm-6 text-center">
@@ -57,19 +55,30 @@
 				<div class="col-md-4 col-sm-6 text-center">
 					<img src="http://placehold.it/350x350" alt= "developer image">
 					<h3 class="text-uppercase">Work3</h3>
-					<a href="link">link1</a>					
+					<a href="link">link1</a>
 				</div>
-			</div>
+			</section>
+			<footer class="row graycolor">
+				<div class="col-md-4">
+					<h5>Phone - +918281276178</h5>
+				</div>
+				<div class="col-md-4">
+					<h5>Mail- njanmelbin@gmail.com</h5>
+				</div>
+				<div class="col-md-4">
+					<h5>Github- github.com/njanmelbin<h5>
+				</div>
+			</footer>
 		</div>
 		  <!-- Modal -->
     <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    <h4 class="modal-title" id="myModalLabel">Portfolio App Page</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="images/img/portfolio-medium.jpg">
+                    <img class="img-responsive" src="images/img/portfolio-medium.jpg" alt="Portfolio image">
                     This was my first project in this class. I learned a lot about HTML and CSS.
                 </div>
                 <div class="modal-footer">
@@ -82,10 +91,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                    <h4 class="modal-title" id="myModalLabel1">Resume App Page</h4>
                 </div>
                 <div class="modal-body">
-                    <img class="img-responsive" src="images/img/resume-medium.jpg">
+                    <img class="img-responsive" src="images/img/resume-medium.jpg" alt="Resume image">
                     This was my first project in this class. I learned a lot about HTML and CSS.
                 </div>
                 <div class="modal-footer">
@@ -94,5 +103,7 @@
             </div>
         </div>
     </div>
-	</body>
+    <script  src="js/jquery-min.js"></script>
+    <script  src="js/bootstrap.min.js"></script>
+    </body>
 </html>
