--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					<h5>Mail- njanmelbin@gmail.com</h5>
 				</div>
 				<div class="col-md-4">
-					<h5>Github- github.com/njanmelbin<h5>
+					<h5>Github- github.com/njanmelbin</h5>
 				</div>
 			</footer>
 		</div>
